2001-01-23  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.include:
	* Makefile.objects: Removed.

	* INSTALL.bicpl: New.

	* configure.in: Detect whether netpbm or IRIS image library
	is installed, used to read or write image files in Images/rgb_io.c;
	we prefer netpbm over IRIS image.  This is is a change, but previous
	behaviour can be restored using "--without-ppm".

	* Images/Makefile.am: Changes for above.

	* Images/rgb_io_sgi.c: Code formerly in rgb_io.c.
	* Images/rgb_io_ppm.c: New.  Do image I/O using netpbm's PPM files.
	* Images/rgb_io_none.c: New.  Emit error if image I/O function called.
	* Images/rgb_io.c: New.  Dummy file that includes one of the above
	options.

2001-01-05  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Add "--with-build-path" flag to set
	CPPFLAGS and LDFLAGS, rather than generating them
	from ${prefix}.
	

2000-12-15  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4: Update to latest version from smr_macros.

	* Images/rgb_io.c: Include config.h.

2000-10-18  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/colour_coding.c (define_colour_coding_user_defined):
	check for monotonic colour scale before checking for non-empty
	range, otherwise a non-monotonic scale may falsely claim that the
	position range is empty.

2000-10-07  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Include/bicpl/marching_cube_data.h: moved header from Marching_cubes.
	* Include/bicpl/splines.h: restored header from Include/Other.
	These two headers are indeed used by other software packages, notably `Display'.

	* Include/bicpl/Makefile.am (pkginclude_HEADERS): install newly-restored headers.

2000-06-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/render.c (render_volume_to_slice): applied patch from
	John & Peter.  The patch does not fix the root problem, which
	relates to the calculation of offsets converting from screen
	pixels to volume voxels. It simply prevents the offsets from