@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(Include/bicpl.h)
-AM_INIT_AUTOMAKE(bicpl, 0.0)
+AM_INIT_AUTOMAKE(bicpl, 1.3.1)
 AM_CONFIG_HEADER(config.h)
 
 dnl Add extra include or link directories
