@@ -1,5 +1,10 @@
 2001-01-23  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* Tagged as release-1_3_1.
+	
+	* configure.in: Set VERSION to 1.3.1.
+	* Makefile.am (libbicpl_la_LDFLAGS): Bumped library REVISION number.
+
 	* Makefile.include:
 	* Makefile.objects: Removed.
 
